@@ -4,6 +4,9 @@
 
 --------------------------------------------------------------------------
   v.3.3.2-Alpha4 
+  	- Added "Keyword" search which searches title, artist name
+		and album name, also forced 'quick search' to always
+		use Keyword (Thx Rubin)
   	- Added ability to Rename/Merge artists (Thx SpComb)
   	- Fixed a flaw in album art search which only returned a single
 		result, now shows all results and allows you to pick
